src/objects/Beer__c.object
<CustomObject>
    <fields>
        <fullName>Alcohol__c</fullName>
        <label>Alcohol</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Brewery__c</fullName>
        <label>Brewery</label>
        <referenceTo>Brewery__c</referenceTo>
        <relationshipLabel>Beers</relationshipLabel>
        <relationshipName>Beers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Image__c</fullName>
        <label>Image</label>
        <length>255</length>
        <type>Text</type>
    </fields>
<fields>
        <fullName>SSN__c</fullName>
        <label>SSN</label>
        <type>Text</type>
        <length>9</length>
        <unique>true</unique>
        <description>Personally identifiable information - highly sensitive.</description>
    </fields>
    <fields>
        <fullName>Tags__c</fullName>
        <label>Tags</label>
        <length>255</length>
        <type>Text</type>
    </fields>
 <fields>
        <fullName>Account_Name__c</fullName>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Acct Scorecards</relationshipLabel>
        <relationshipName>Acct_Scorecards</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Acct_Scorecard_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Acct Scorecard Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Acct_Scorecards</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Beer</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Beer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Beers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>